# skript

./: .gitignore  Cargo.toml  README.md  if.yaml  phase_2.md  planning.md  skript-design.md  skript-impl.md
dsl_examples/: assign_node.yaml  complex_flow.yaml  function_node.yaml  if_node.yaml  iteration_node.yaml  loop_node.yaml  simple_parallel.yaml
examples/: distributed_worker.rs
skript-creator/: index.html  package-lock.json  package.json
skript-creator/src/: App.tsx  types.ts
skript-creator/src/components/: Canvas.tsx  PropertiesPanel.tsx  Sidebar.tsx
skript-creator/src/components/nodes/: GenericNode.tsx
skript-creator/src/store/: useWorkflowStore.ts
skript-creator/src/utils/: yamlConverter.ts
src/: lib.rs
src/actions/: builtin.rs  http.rs  mod.rs
src/benchmark/: actions.rs  mod.rs
src/compiler/: core.rs  expander.rs  loader.rs  mod.rs  optimizer.rs
src/dsl/: builder.rs  mod.rs
src/nodes/: action.rs  common.rs  flow.rs  function.rs  fused.rs  mod.rs
src/runtime/: blueprint.rs  context.rs  engine.rs  mod.rs  node.rs  redis_storage.rs  storage.rs  syscall.rs  task.rs
tests/: compiler_test.rs  distributed_test.rs  dsl_test.rs  engine_test.rs  examples_test.rs  expander_test.rs  http_test.rs  loader_test.rs  optimizer_test.rs  parallel_execution_test.rs  redis_integration_test.rs
tests/fixtures/: distributed_flow.yaml
